--- a/assets/css/front_cool.css
+++ b/assets/css/front_cool.css
@@ -131,7 +131,7 @@ a.signin.menu-open span {
 .signin_submit {
 	-moz-border-radius:4px;
 	-webkit-border-radius:4px;
-	background:#39d url('../img/bg-btn-blue.png') repeat-x scroll 0 0;
+	background:#39d;
 	border:1px solid #39D;
 	color:#fff;
 	text-shadow:0 -1px 0 #39d;
