--- a/assets/css/front_cool.css
+++ b/assets/css/front_cool.css
@@ -241,7 +241,10 @@ p { font-size:11px; color:#000; margin:5px 5px 5px 80px; }
     -moz-box-shadow: 4px 4px #dfe1d8;
     -webkit-box-shadow: 4px 4px #dfe1d8;
 }
-
+label.error{
+	z-index: 10;
+	display: inline-block;
+}
 /*Styling for text inside boxes*/
 h4 { margin:5px 5px 5px 80px;padding:0; font-size:16px; }
 /*p { font-size:10px; color:#000; margin:5px 5px 5px 80px; }*/
