--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -908,10 +908,10 @@ background: url(bubble.gif) no-repeat bottom;
         display:none;
         position:absolute;
         top:100%;
-        left:0;
+        /*left:0;*/
         background:#fff;
         padding:0;
-    z-index: 1000;
+      z-index: 1000;
     }
 
 
