--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,10 @@ a:visited {
     float: right;
     display:inline;
 }
+.grey{
+    color:#AAA;
+    font-style: italic;
+}
 .sb-toggle-left {
     font-family: Helvetica, Arial, sans-serif;
     color: #FFFFFF;
