--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1117,5 +1117,78 @@ a.current{
 #loading span{display:block;width:auto; margin-top: 35px; position:fixed; top:50%; left:50%}
 .empty{color:#CCC; font-style: italic;}
 
+/*
+Team List Table
+*/
+table#teamListTable tr:nth-of-type(even){
+    background: #eee;
+}
+@media only screen and (max-width: 768px), (min-device-width: 768px) and (max-device-width: 1024px) {
+
+    table#teamListTable, #teamListTable thead, #teamListTable tbody, #teamListTable th, #teamListTable td, #teamListTable tr {
+        display: block;
+    }
+    #teamListTable thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+
+    #teamListTable tr {
+        border: 1px solid #ccc;
+    }
+
+    #teamListTable td {
+        border: none;
+        border-bottom: 1px solid #eee;
+        position: relative;
+        padding-left: 50% !important;
+    }
+
+    #teamListTable td:before {
+        position: absolute;
+        top: 6px;
+        left: 6px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 11px;
+    }
+
+    #teamListTable td:nth-of-type(1):before {
+        content: "Name";
+    }
+
+    #teamListTable td:nth-of-type(2):before {
+        content: "Title";
+    }
+
+    #teamListTable td:nth-of-type(3):before {
+        content: "Organization";
+    }
+
+    #teamListTable td:nth-of-type(4):before {
+        content: "Email";
+    }
+
+    #teamListTable td:nth-of-type(5):before {
+        content: "Phone";
+    }
+
+    #teamListTable td:nth-of-type(6):before {
+        content: "Stakeholder category";
+    }
+
+    #teamListTable td:nth-of-type(7):before {
+        content: "Action";
+    }
+
+    #teamListTable td:nth-of-type(8):before {
+        content: "Action";
+    }
+}
+
 
 
