--- a/assets/css/front_cool.css
+++ b/assets/css/front_cool.css
@@ -267,6 +267,17 @@ h4 { margin:5px 5px 5px 80px;padding:0; font-size:16px; }
 /*------------------------
 login
 ------------------------*/
+h1.logotxt {
+	display: block;
+	width: auto;
+	font-style:normal;
+	font-weight:bolder;
+	font-size: 2.5em;
+	color: #ffffff;
+	padding: 1%;
+	float: left;
+	margin:0px;
+}
 p.logotxt {
     display: block;
     width: 250px;
